--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,7 +4,8 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color                      : #000000;
+// @syntax-text-color                      : #000000;
+@syntax-text-color                      : #333333;
 @syntax-cursor-color                    : #000000;
 // @syntax-text-color                   : #4a4543;
 // @syntax-cursor-color                 : #4a4543;
