lighten - the guides

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -13,9 +13,9 @@
 @syntax-background-color                : #FFFFFF;
 
 // Guide colors
-@syntax-wrap-guide-color                : #BFBFBF;
-@syntax-indent-guide-color              : #BFBFBF;
-@syntax-invisible-character-color       : #BFBFBF;
+@syntax-wrap-guide-color                : #D7D7D7;
+@syntax-indent-guide-color              : #D7D7D7;
+@syntax-invisible-character-color       : #D7D7D7;
 
 // For find and replace markers
 @syntax-result-marker-color             : #BFBFBF;
