--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,11 +4,10 @@
 // include a syntax-variables.less file.
 
 // General colors
-// @syntax-text-color                      : #000000;
+// @syntax-text-color                   : #000000;
 @syntax-text-color                      : #333333;
 @syntax-cursor-color                    : #000000;
-// @syntax-text-color                   : #4a4543;
-// @syntax-cursor-color                 : #4a4543;
+@syntax-cursor-color                 		: rgb(44, 196, 94);
 @syntax-selection-color                 : rgba(77, 151, 255, 0.33);
 @syntax-background-color                : #FFFFFF;
 
