Fix String color

--- a/styles/base.less
+++ b/styles/base.less
@@ -200,7 +200,7 @@ atom-text-editor, :host {
 }
 
 // .invalid.illegal {
-invalid {
+.invalid {
   //   background-color: @red;
   //   color: @syntax-background-color;
   color: #FFFFFF;
@@ -211,7 +211,7 @@ invalid {
   background-color: #FFD0D0;
 }
 
-string {
+.string {
   // color: @green;
   color: #036A07;
   color: #df5000;
